little bit changed

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="col">
                 <div class="text-center bg-success p-5 rounded-5 text-white">
                     <h3>Meter no: 3900</h3>
-                    <input type="text" name="" id="unitData1" class="form-control">
+                    <input type="number" name="" id="unitData1" class="form-control">
                     <button class="btn btn-light mt-3" id="calculateButton1">Calculate</button>
                     <div id="unitAdd1" class="mt-2"></div>
                     <h4 class="mt-2">Total Bill: <span id="bill1">0</span> ৳</h4>
@@ -30,7 +30,7 @@
             <div class="col">
                 <div class="text-center bg-warning p-5 rounded-5 text-white">
                     <h3>Meter no: 3905</h3>
-                    <input type="text" name="" id="unitData2" class="form-control">
+                    <input type="number" name="" id="unitData2" class="form-control">
                     <button class="btn btn-light mt-3" id="calculateButton2">Calculate</button>
                     <div id="unitAdd2" class="mt-2"></div>
                     <h4 class="mt-2">Total Bill: <span id="bill2">0</span> ৳</h4>
@@ -42,7 +42,7 @@
             <div class="col">
                 <div class="text-center bg-danger p-5 rounded-5 text-white">
                     <h3>Meter no: 3904</h3>
-                    <input type="text" name="" id="unitData3" class="form-control">
+                    <input type="number" name="" id="unitData3" class="form-control">
                     <button class="btn btn-light mt-3" id="calculateButton3">Calculate</button>
                     <div id="unitAdd3" class="mt-2"></div>
                     <h4 class="mt-2">Total Bill: <span id="bill3">0</span> ৳</h4>
@@ -54,7 +54,7 @@
             <div class="col">
                 <div class="text-center bg-primary p-5 rounded-5 text-white ">
                     <h3>Meter no: 3906</h3>
-                    <input type="text" name="" id="unitData4" class="form-control">
+                    <input type="number" name="" id="unitData4" class="form-control">
                     <button class="btn btn-light mt-3" id="calculateButton4">Calculate</button>
                     <div id="unitAdd4" class="mt-2"></div>
                     <h4 class="mt-2">Total Bill: <span id="bill4">0</span> ৳</h4>
@@ -66,7 +66,7 @@
             <div class="col">
                 <div class="text-center bg-secondary p-5 rounded-5 text-white ">
                     <h3>Meter no: 3903</h3>
-                    <input type="text" name="" id="unitData5" class="form-control">
+                    <input type="number" name="" id="unitData5" class="form-control">
                     <button class="btn btn-light mt-3" id="calculateButton5">Calculate</button>
                     <div id="unitAdd5" class="mt-2"></div>
                     <h4 class="mt-2">Total Bill: <span id="bill5">0</span> ৳</h4>
@@ -78,7 +78,7 @@
             <div class="col">
                 <div class="text-center bg-success p-5 rounded-5 text-white">
                     <h3>Meter no: 3902</h3>
-                    <input type="text" name="" id="unitData6" class="form-control">
+                    <input type="number" name="" id="unitData6" class="form-control">
                     <button class="btn btn-light mt-3" id="calculateButton6">Calculate</button>
                     <div id="unitAdd6" class="mt-2"></div>
                     <h4 class="mt-2">Total Bill: <span id="bill6">0</span> ৳</h4>
